Fixes for Java 1.8 compatibility